Styling updates and character counter

--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
             <textarea id="message-input" name="message" placeholder=" " required minlength="1" maxlength="255"
                 autocorrect="on"></textarea>
             <label for="message" id="message-label">Message</label>
+            <p id="message-length-feedback"></p>
             <button type="submit" id="form-submit">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="3"
                     stroke-linecap="round" stroke-linejoin="round">
