Adds FastAPI backend

--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <form id="form" action="/submit-message" method="post">
+        <form id="form" action="/submit" method="post">
             <textarea id="message-input" name="message" placeholder=" " required minlength="1" maxlength="255"
                 autocorrect="on"></textarea>
             <label for="message" id="message-label">Message</label>
